test(e2e): #6 error while connecting wallet

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -94,6 +94,7 @@
     "customize-cra": "^1.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.0",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
