--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,7 +1,7 @@
 name: E2E
 
 on:
-  push:
+  pull_request:
     branches:
       - 'jorge/e2e-workflow'
 
@@ -31,12 +31,12 @@ jobs:
           node-version: "18.19.0"
       - name: yarn install
         run: yarn
+      - name: yarn build
+        working-directory: ./agoric
+        run: yarn build
       - name: yarn start:docker
         working-directory: ./agoric
         run: yarn start:docker
-      - name: yarn build
-        run: yarn build
-      
       - name: Install linux deps
         run: |
           sudo apt-get install --no-install-recommends -y \
@@ -51,6 +51,7 @@ jobs:
           DISPLAY: :0.0
             
       - name: Run e2e tests
+        working-directory: ./frontend
         uses: cypress-io/github-action@v6
         with:
           start: npx serve ui/dist -p 5173
