--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,12 +47,13 @@
     "workbox-streams": "^6.5.3"
   },
   "scripts": {
-    "dev": "NODE_ENV=development vite --host",
+    "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src",
     "test": "jest",
     "test:e2e": "EXTENSION=keplr synpress run --configFile=test/e2e/synpress.config.js",
+    "test:e2e:ci": "start-server-and-test 'yarn dev' http-get://localhost:5173 'yarn test:e2e'",
     "lint:fix": "eslint . --ext .ts,.tsx,.js --fix"
   },
   "browserslist": {
@@ -98,6 +99,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "start-server-and-test": "^2.0.3",
     "jest": "^29.5.0",
     "prettier": "^3.0.3",
     "ts-jest": "^29.0.5",
