--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,8 +55,7 @@
     "preview": "vite preview",
     "lint": "eslint src",
     "test": "jest",
-    "test:e2e": "EXTENSION=keplr synpress run --configFile=test/e2e/synpress.config.js",
-    "test:e2e:ci": "start-server-and-test 'yarn dev' http-get://localhost:5173 'yarn test:e2e'",
+    "test:e2e": "EXTENSION=keplr synpress run --configFile=test/e2e/synpress.config.js --env PRIVATE_KEY='f20cbc1d201e368f32f2370701f3f4575063986b1dc9364cd8f01f278c9192bc' yarn test:e2e ",
     "lint:fix": "eslint . --ext .ts,.tsx,.js --fix",
     "start:docker": "cd test/e2e/ && docker compose up -d"
   },
