--- a/frontend/test/e2e/docker-compose.yml
+++ b/frontend/test/e2e/docker-compose.yml
@@ -11,5 +11,5 @@ services:
       DEST: 1
       DEBUG: "SwingSet:ls,SwingSet:vat"
     volumes:
-      - /Users/jorgelopes/Documents/GitHub/Agoric/projects/KREAd/frontend:/frontend
+      - ${{ github.workspace }}:/frontend
     entrypoint: /frontend/test/e2e/scripts/run-chain.sh
