--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -5,13 +5,12 @@ on:
     branches:
       - 'jorge/e2e-workflow'
 
-defaults:
-  run:
-    working-directory: ${{ github.workspace }}/frontend
-
 jobs:
   unit:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -23,6 +22,9 @@ jobs:
         run: yarn
   integration:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
