--- a/.github/workflows/working-dir.yml
+++ b/.github/workflows/working-dir.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Change to frontend directory
-        run: cd frontend
+        run: cd $GITHUB_WORKSPACE/frontend
 
       - name: Print Working Directory
         run: pwd
