--- a/.github/workflows/working-dir.yml
+++ b/.github/workflows/working-dir.yml
@@ -18,3 +18,13 @@ jobs:
 
       - name: Print Working Directory
         run: pwd
+
+      - name: List contents of GITHUB_WORKSPACE
+        run: ls -al $GITHUB_WORKSPACE
+
+      - name: Debug Information
+        run: |
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+          ls -al $GITHUB_WORKSPACE
+          
+
