--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -5,13 +5,13 @@ on:
     branches:
       - 'jorge/e2e-workflow'
 
-defaults:
-  run:
-    working-directory: frontend
-
 jobs:
   unit:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./frontend
     steps:
       - name: Print Working Directory
         run: pwd
@@ -26,6 +26,10 @@ jobs:
         run: yarn
   integration:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./frontend
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
