--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -60,7 +60,7 @@ jobs:
           sudo apt-get install --no-install-recommends -y \
           fluxbox \
           xvfb
-          
+
       - name: Run xvfb and fluxbox
         run: |
           Xvfb :0 -screen 0 1024x768x24 -listen tcp -ac &
@@ -71,6 +71,7 @@ jobs:
       - name: Run e2e tests
         uses: cypress-io/github-action@248bde77443c376edc45906ede03a1aba9da0462
         with:
+          working-directory: ./frontend
           start: yarn dev
           command: yarn test:e2e
           wait-on: 'http://localhost:5173'
