--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -85,6 +85,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
+          working-directory: ./frontend
           name: e2e-artifacts
           path: |
               test/e2e/videos
