--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,7 @@
     "workbox-streams": "^6.5.3"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src",
