--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -73,21 +73,20 @@ jobs:
         with:
           working-directory: ./frontend
           start: yarn dev
-          command: PRIVATE_KEY="f20cbc1d201e368f32f2370701f3f4575063986b1dc9364cd8f01f278c9192bc" yarn test:e2e 
+          command: yarn test:e2e 
           wait-on: 'http://localhost:5173'
           wait-on-timeout: 120
           browser: chrome
         env:
           DISPLAY: :0.0
-          CYPRESS_PRIVATE_KEY: "f20cbc1d201e368f32f2370701f3f4575063986b1dc9364cd8f01f278c9192bc"
+          PRIVATE_KEY: "f20cbc1d201e368f32f2370701f3f4575063986b1dc9364cd8f01f278c9192bc"
 
       - name: Archive e2e artifacts
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          working-directory: ./frontend
           name: e2e-artifacts
           path: |
-              test/e2e/videos
-              test/e2e/screenshots
+              frontend/test/e2e/videos
+              frontend/test/e2e/screenshots
         continue-on-error: true
