--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -26,6 +26,8 @@ jobs:
         with:
           node-version: "18.8.x"
 
+      - uses: c-hive/gha-yarn-cache@v2
+
       - name: yarn install
         run: yarn
 
@@ -48,6 +50,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "18.18"
+      
 
       - name: yarn install
         run: yarn
