test(e2e): print wallet address and fix cache

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -25,8 +25,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "18.8.x"
-
-      - uses: c-hive/gha-yarn-cache@v2
+          cache: 'yarn'
 
       - name: yarn install
         run: yarn
