--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -71,7 +71,7 @@ jobs:
           DISPLAY: :0.0
             
       - name: Run e2e tests
-        uses: cypress-io/github-action@248bde77443c376edc45906ede03a1aba9da0462
+        uses: cypress-io/github-action@v6
         with:
           working-directory: ./frontend
           start: yarn dev
