--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,7 +55,8 @@
     "test:e2e": "SKIP_EXTENSION_SETUP=true EXTENSION=keplr synpress run --configFile=test/e2e/synpress.config.js",
     "lint:fix": "eslint . --ext .ts,.tsx,.js --fix",
     "start:docker": "docker compose -f ./test/e2e/docker-compose.yml up  -d",
-    "docker:print-key": "docker exec e2e-agd-1 bash -c 'yes | agd keys export --unsafe --unarmored-hex --keyring-backend=test user1'"
+    "docker:print-key": "docker exec e2e-agd-1 bash -c 'yes | agd keys export --unsafe --unarmored-hex --keyring-backend=test user1'",
+    "docker:mint100": "docker exec e2e-agd-1 make -C /workspace/scripts mint100"
   },
   "browserslist": {
     "production": [
