--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,13 +47,12 @@
     "workbox-streams": "^6.5.3"
   },
   "scripts": {
-    "dev": "NODE_ENV=development vite --host",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src",
     "test": "jest",
-    "test:e2e": "EXTENSION=keplr synpress run --configFile=test/e2e/synpress.config.js --noExit",
-    "test:ope2e": "EXTENSION=keplr synpress open --configFile=test/e2e/synpress.config.js",
+    "test:e2e": "SKIP_EXTENSION_SETUP=true EXTENSION=keplr synpress run --configFile=test/e2e/synpress.config.js",
     "lint:fix": "eslint . --ext .ts,.tsx,.js --fix",
     "start:docker": "docker compose -f ./test/e2e/docker-compose.yml up  -d",
     "docker:print-key": "docker exec e2e-agd-1 bash -c 'yes | agd keys export --unsafe --unarmored-hex --keyring-backend=test user1'"
@@ -101,6 +100,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "start-server-and-test": "^2.0.3",
     "jest": "^29.5.0",
     "prettier": "^3.0.3",
     "ts-jest": "^29.0.5",
