--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,7 +52,7 @@
     "preview": "vite preview",
     "lint": "eslint src",
     "test": "jest",
-    "test:e2e": "SKIP_EXTENSION_SETUP=true EXTENSION=keplr synpress run --configFile=test/e2e/synpress.config.js",
+    "test:e2e": "EXTENSION=keplr synpress run --configFile=test/e2e/synpress.config.js",
     "lint:fix": "eslint . --ext .ts,.tsx,.js --fix",
     "start:docker": "docker compose -f ./test/e2e/docker-compose.yml up  -d",
     "docker:print-key": "docker exec e2e-agd-1 bash -c 'yes | agd keys export --unsafe --unarmored-hex --keyring-backend=test user1'"
