chore(e2e): dynamic approach for wallets key and address

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -50,19 +50,23 @@ jobs:
         run: yarn start:docker
 
       - name: Print user1 address
-        run: docker exec e2e-agd-1 bash -c 'agd keys show user1 --keyring-backend=test --address'
+        id: print_user1_address
+        run: echo "::set-output name=user1_address::$(docker exec e2e-agd-1 bash -c 'agd keys show user1 --keyring-backend=test --address')"
 
       - name: Print user1 private key
-        run: docker exec e2e-agd-1 bash -c 'yes | agd keys export --unsafe --unarmored-hex --keyring-backend=test user1'
+        id: print_user1_private_key
+        run: echo "::set-output name=user1_private_key::$(docker exec e2e-agd-1 bash -c 'yes | agd keys export --unsafe --unarmored-hex --keyring-backend=test user1')"
 
       - name: Print user2 address
-        run: docker exec e2e-agd-1 bash -c 'agd keys show user2 --keyring-backend=test --address'
+        id: print_user2_address
+        run: echo "::set-output name=user2_address::$(docker exec e2e-agd-1 bash -c 'agd keys show user2 --keyring-backend=test --address')"
 
       - name: Print user2 private key
-        run: docker exec e2e-agd-1 bash -c 'yes | agd keys export --unsafe --unarmored-hex --keyring-backend=test user2'
+        id: print_user2_private_key
+        run: echo "::set-output name=user2_private_key::$(docker exec e2e-agd-1 bash -c 'yes | agd keys export --unsafe --unarmored-hex --keyring-backend=test user2')"
 
-      - name: Provision user2
-        run: docker exec e2e-agd-1 bash -c 'agd tx bank send user1 agoric1san5qxufg5hsxwdurtkhgqq0pmmp0848c459xm 15000000uist --keyring-backend=test --chain-id=agoriclocal --gas=auto --gas-adjustment=1.2 --yes -b block'
+      # - name: Provision user2
+      #   run: docker exec e2e-agd-1 bash -c 'agd tx bank send ${{ steps.print_user1_address.outputs.user1_address }} ${{ steps.print_user2_address.outputs.user2_address }} 15000000uist --keyring-backend=test --chain-id=agoriclocal --gas=auto --gas-adjustment=1.2 --yes -b block'
 
       - name: Install linux deps
         run: |
@@ -88,9 +92,9 @@ jobs:
           browser: chrome
         env:
           DISPLAY: :0.0
-          CYPRESS_USER1_PRIVATE_KEY: "b3209e3771c0d97434ed4f9d6c223a442d1241968fd1f1b0e03e755b92339069" 
-          CYPRESS_USER2_PRIVATE_KEY: "d239e07ca631c6d1051de5725dc5bdab8b937ba6979be011c55b22e87c4b499f"
-          PRIVATE_KEY: "b3209e3771c0d97434ed4f9d6c223a442d1241968fd1f1b0e03e755b92339069"
+          CYPRESS_USER1_PRIVATE_KEY: ${{ steps.print_user1_private_key.outputs.user1_private_key }} 
+          CYPRESS_USER2_PRIVATE_KEY: ${{ steps.print_user2_private_key.outputs.user2_private_key }}
+          PRIVATE_KEY: ${{ steps.print_user1_private_key.outputs.user1_private_key }}
 
       - name: Archive e2e artifacts
         uses: actions/upload-artifact@v4
