--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -67,7 +67,7 @@ jobs:
 
 
       - name: Provision user2
-        run: sleep 10 && docker exec e2e-agd-1 bash -c 'agd tx bank send ${{ env.user1_address }} ${{ user2_address }} 15000000uist --keyring-backend=test --chain-id=agoriclocal --gas=auto --gas-adjustment=1.2 --yes -b block'
+        run: sleep 10 && docker exec e2e-agd-1 bash -c 'agd tx bank send ${{ env.user1_address }} ${{ env.user2_address }} 15000000uist --keyring-backend=test --chain-id=agoriclocal --gas=auto --gas-adjustment=1.2 --yes -b block'
 
       - name: Install linux deps
         run: |
