--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -58,7 +58,10 @@ jobs:
           echo "user2_private_key=$(docker exec e2e-agd-1 bash -c 'yes | agd keys export --unsafe --unarmored-hex --keyring-backend=test user2')" >> $GITHUB_ENV
 
       - name: Provision user2
-        run: sleep 60 && docker exec e2e-agd-1 bash -c 'agd tx bank send ${{ env.user1_address }} ${{ env.user2_address }} 15000000uist --keyring-backend=test --chain-id=agoriclocal --gas=auto --gas-adjustment=1.2 --yes -b block'
+        run: |
+          sleep 60
+          chmod +x ./test/e2e/scripts/fund-user2.sh
+         ./test/e2e/scripts/fund-user2.sh
 
       - name: Install linux deps
         run: |
