fix(packages): update dependencies version

--- a/agoric/package.json
+++ b/agoric/package.json
@@ -32,6 +32,34 @@
   "dependencies": {
     "agoric": "agoric-upgrade-11"
   },
+  "resolutions": {
+    "@agoric/assert": "dev",
+    "@agoric/cosmic-proto": "dev",
+    "@agoric/deploy-script-support": "dev",
+    "@agoric/ertp": "dev",
+    "@agoric/governance": "dev",
+    "@agoric/internal": "dev",
+    "@agoric/notifier": "dev",
+    "@agoric/store": "dev",
+    "@agoric/time": "dev",
+    "@agoric/vat-data": "dev",
+    "@agoric/vats": "dev",
+    "@agoric/zoe": "dev",
+    "@agoric/zone": "dev",
+    "@cosmjs/crypto": "^0.32.1",
+    "@cosmjs/encoding": "^0.32.1",
+    "@cosmjs/math": "^0.32.1",
+    "@cosmjs/proto-signing": "^0.32.1",
+    "@cosmjs/stargate": "^0.31.1",
+    "@endo/bundle-source": "^3.4.2",
+    "@endo/eventual-send": "^1.2.7",
+    "@endo/far": "^1.1.5",
+    "@endo/init": "^1.1.4",
+    "@endo/marshal": "^1.6.1",
+    "@endo/patterns": "^1.4.6",
+    "@endo/ses-ava": "^1.2.7",
+    "import-meta-resolve": "^2.2.1"
+  },
   "scripts": {
     "lint": "yarn workspaces run lint-fix",
     "lint-check": "yarn workspaces run lint-check",
